[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menus/StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 454.0
margin_top = 218.0
margin_right = 549.0
margin_bottom = 362.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 95.0
margin_bottom = 14.0
text = "MechTechnical"

[node name="Controls" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 95.0
margin_bottom = 144.0
custom_constants/separation = 10

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer/Controls"]
margin_right = 95.0
margin_bottom = 20.0
text = "Join"

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer/Controls"]
margin_top = 30.0
margin_right = 95.0
margin_bottom = 50.0
text = "Host"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer/Controls"]
margin_top = 60.0
margin_right = 95.0
margin_bottom = 80.0
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/Controls"]
margin_top = 90.0
margin_right = 95.0
margin_bottom = 110.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls/Quit" to="." method="_on_Quit_pressed"]
